Update JVM config flags